# rust-bittorrent-client

./: .editorconfig  .gitignore  Cargo.toml  README.md  test.torrent
docs/: BitTorrent.md
src/: bitfield.rs  client.rs  file_writer.rs  main.rs  parser.rs  peer.rs  peer_manager.rs  piece.rs  piece_assembler.rs  piece_picker.rs  torrent.rs  torrent_info.rs  torrent_session.rs  tracker.rs
src/bencode/: decode.rs  encode.rs  mod.rs  object.rs
