[package]
name = "rust-torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
hex = "0.4.3"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
sha1 = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"
url = "2.5.8"
urlencoding = "2.1.3"
